# android-ndk-curl

./: README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni-curl-lib.cpp
app/src/main/java/com/example/jnicurl/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
distribution/libssl/include/openssl/: opensslconf.h
